Squashed commit of the following:
commit 8d90ac69648a737bf7364471807f9dd15d49fc33
Author: hd-code <54773293+hd-code@users.noreply.github.com>
Date:   Sat Apr 17 22:40:41 2021 +0200

    fixed coding guidelines

commit 38235f436df7ba42442a52c6481a9093f3637db3
Author: hd-code <54773293+hd-code@users.noreply.github.com>
Date:   Sat Apr 17 22:18:55 2021 +0200

    fixed bugs in iterator

commit f7dff3e0fd03714728a75f309cc88175c6ef782e
Author: hd-code <54773293+hd-code@users.noreply.github.com>
Date:   Sat Apr 17 11:57:14 2021 +0200

    fixed iterator bug

commit fbc3a489a1d646e285a6fe625ea3ab60b68a1bab
Author: hd-code <54773293+hd-code@users.noreply.github.com>
Date:   Sat Apr 17 00:07:54 2021 +0200

    Almost finished iterator

commit 1c237ac661e8cea255bb328b5467af881490e419
Author: hd-code <54773293+hd-code@users.noreply.github.com>
Date:   Thu Apr 15 23:18:33 2021 +0200

    - further work on iterator
    - added vector and aabb

commit 87262fff6ebc8abc72b5235687f88bc3c58f6ca9
Author: hd-code <54773293+hd-code@users.noreply.github.com>
Date:   Wed Apr 14 14:35:07 2021 +0200

    - prepared phases in other projects
    - removed tmp
    - moved event system to core

commit 3e13400d3ea65d1822f4f3f952299c0838ecc954
Author: hd-code <54773293+hd-code@users.noreply.github.com>
Date:   Mon Apr 12 20:28:32 2021 +0200

    fixed formatting

--- a/source/code/intern/compiler/core/core.vcxproj
+++ b/source/code/intern/compiler/core/core.vcxproj
@@ -18,6 +18,19 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\..\src\core\aabb.cpp" />
+    <ClCompile Include="..\..\src\core\event-system.cpp" />
+    <ClCompile Include="..\..\src\core\vector2.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\src\core\aabb.hpp" />
+    <ClInclude Include="..\..\src\core\event-listener.hpp" />
+    <ClInclude Include="..\..\src\core\event-system.hpp" />
+    <ClInclude Include="..\..\src\core\event.hpp" />
+    <ClInclude Include="..\..\src\core\singleton.hpp" />
+    <ClInclude Include="..\..\src\core\vector2.hpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
@@ -150,13 +163,6 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClInclude Include="..\..\src\core\aabb.hpp" />
-    <ClInclude Include="..\..\src\core\singleton.hpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="..\..\src\core\tmp.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
