--- a/source/code/intern/compiler/core/core.vcxproj.filters
+++ b/source/code/intern/compiler/core/core.vcxproj.filters
@@ -1,10 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClInclude Include="..\..\src\core\singleton.hpp" />
-    <ClInclude Include="..\..\src\core\aabb.hpp" />
+    <ClCompile Include="..\..\src\core\aabb.cpp" />
+    <ClCompile Include="..\..\src\core\event-system.cpp" />
+    <ClCompile Include="..\..\src\core\vector2.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\src\core\tmp.cpp" />
+    <ClInclude Include="..\..\src\core\aabb.hpp" />
+    <ClInclude Include="..\..\src\core\event.hpp" />
+    <ClInclude Include="..\..\src\core\event-listener.hpp" />
+    <ClInclude Include="..\..\src\core\event-system.hpp" />
+    <ClInclude Include="..\..\src\core\singleton.hpp" />
+    <ClInclude Include="..\..\src\core\vector2.hpp" />
   </ItemGroup>
 </Project>
