--- a/source/code/intern/compiler/data/data.vcxproj.filters
+++ b/source/code/intern/compiler/data/data.vcxproj.filters
@@ -1,20 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClInclude Include="..\..\src\data\entity.hpp" />
-    <ClInclude Include="..\..\src\data\entity-iterator.hpp" />
-    <ClInclude Include="..\..\src\data\entity-link.hpp" />
-    <ClInclude Include="..\..\src\data\entity-list.hpp" />
-    <ClInclude Include="..\..\src\data\event.hpp" />
-    <ClInclude Include="..\..\src\data\event-listener.hpp" />
-    <ClInclude Include="..\..\src\data\event-system.hpp" />
-    <ClInclude Include="..\..\src\data\meta-entity.hpp" />
-    <ClInclude Include="..\..\src\data\sector.hpp" />
-    <ClInclude Include="..\..\src\data\world-system.hpp" />
+    <ClCompile Include="..\..\src\data\entity.cpp" />
+    <ClCompile Include="..\..\src\data\entity-folder.cpp" />
+    <ClCompile Include="..\..\src\data\entity-iterator.cpp" />
+    <ClCompile Include="..\..\src\data\entity-link.cpp" />
+    <ClCompile Include="..\..\src\data\entity-list.cpp" />
+    <ClCompile Include="..\..\src\data\map.cpp" />
+    <ClCompile Include="..\..\src\data\map-system.cpp" />
+    <ClCompile Include="..\..\src\data\sector.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\src\data\entity-link.cpp" />
-    <ClCompile Include="..\..\src\data\event-system.cpp" />
-    <ClCompile Include="..\..\src\data\event.cpp" />
+    <ClInclude Include="..\..\src\data\entity.hpp" />
+    <ClInclude Include="..\..\src\data\entity-folder.hpp" />
+    <ClInclude Include="..\..\src\data\entity-iterator.hpp" />
+    <ClInclude Include="..\..\src\data\entity-kind.hpp" />
+    <ClInclude Include="..\..\src\data\entity-link.hpp" />
+    <ClInclude Include="..\..\src\data\entity-list.hpp" />
+    <ClInclude Include="..\..\src\data\map.hpp" />
+    <ClInclude Include="..\..\src\data\map-system.hpp" />
+    <ClInclude Include="..\..\src\data\meta-entity.hpp" />
+    <ClInclude Include="..\..\src\data\sector.hpp" />
   </ItemGroup>
 </Project>
